style.css
body{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
.nav-item-link{
    text-decoration: none;
    color: #e6e6e6;
    margin: 10px;
}
.nav-item-link:hover{
    color: rgb(158, 158, 158);
}
.title{
    /* animation: slide-in-left 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both; */
    position: absolute;
}

.navbar{
    height: 40px;
    width: 100%;
    position: fixed;
    color: #e6e6e6;
    font-family: 'Montserrat', sans-serif;
    display: flex;
    justify-content: space-between;
    margin-top: 10px;
    animation: slide-in-top 0.9s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s both;
    z-index: 1;
}
@keyframes slide-in-top {
    0% {
        transform: translateY(-1000px);
        opacity: 0;
    }
    100% {
        transform: translateY(0);
        opacity: 1;
    }
  }
.nav-logo{
    font-weight: 300;
    font-size: 1rem;
    border: 2px solid #e6e6e6;
    height: 50%;
    padding: 9px;
    border-radius: 10px;
    margin: 0;
    margin-left: 20px;
}
.nav-list{
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 35%;
    list-style: none;
    padding: 0;
    margin: 0;
    text-align: center;
}
.nav-item:hover{
    background-color: #e6e6e6;
    color: black;
    border-radius: 5px;
}


.hero{
    background: url("spider.jpg");
    width: 100%;
    height: 100vh;
    background-size: cover;
}
.header{
    color: #e6e6e6;
    font-family: 'Montserrat', sans-serif;
    font-size: 4rem;
    margin: 0;
    padding-left: 20px;
    padding-top: 150px;
    font-weight: 800;
}

.header-none{
    display: none;
}

@keyframes slide-in-left {
    0% {
        transform: translateX(-1000px);
        opacity: 0;
    }
    100% {
        transform: translateX(0);
        opacity: 1;
    }
  }
#about{
    height: 100vh;
    background: #eeeeee;
    color: #5a5a5a;
    font-family: 'Montserrat', sans-serif;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
.about h2{
    font-weight: 500;
}
.about-header{
    margin: 0;
    padding: 0;
}
.about-box{
    height: 25%;
    width: 60%;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.black{
    color: black;
}
.gallery{
    height: 100vh;
    width: 100vw;
    margin: 0;
    padding: 0;
}
@media (max-width: 600px){
    .nav-list{
        display: none;
    }
}
@media (max-height: 500px){
    .title{
        font-size: 2rem;
    }
}
@media (max-width: 1000px){
    .hero{
        background-position-x: center;
        background-position-y: center;
    }
    .header{
        font-size: 2rem;
        padding-top: 200px;
    }
}
@media (max-height: 1000px){
    .hero{
        background-position-y: center;
    }
}
@media (min-width: 1920px){
    .hero{
        background-position-x: center;
        background-position-y: center;
    }
}
hr{
    color: black;
    width: 100%;
}
.gallery-container {
    column-count: 3;
    /* column-gap: .6em; */
    width: 100%;
    margin: 0;
    padding: 0;
}
.item {
    
    width: 80%;
}

